Update filter buttons in project section
Reordered and modified filter buttons: moved Python up, added Android filter, and removed JavaScript filter. This improves the categorization and accessibility of project filters.

--- a/index.html
+++ b/index.html
@@ -449,18 +449,20 @@
         <button class="filter-btn active" data-filter="all">
             <i class="fas fa-layer-group"></i> All
         </button>
-        <button class="filter-btn" data-filter="web">
-            <i class="fas fa-globe"></i> Web
-        </button>
-        <button class="filter-btn" data-filter="javascript">
-            <i class="fab fa-js"></i> JavaScript
+        <button class="filter-btn" data-filter="python">
+            <i class="fab fa-python"></i> Python
         </button>
         <button class="filter-btn" data-filter="html">
             <i class="fab fa-html5"></i> HTML/CSS
         </button>
-        <button class="filter-btn" data-filter="python">
-            <i class="fab fa-python"></i> Python
+        <button class="filter-btn" data-filter="web">
+            <i class="fas fa-globe"></i> Web
         </button>
+        <button class="filter-btn" data-filter="java">
+            <i class="fab fa-android"></i> Android
+        </button>
+
+
     </div>
 
     <main>
