--- a/index.html
+++ b/index.html
@@ -594,10 +594,14 @@
             <a href="https://www.instagram.com/__praisee" target="_blank" rel="noopener" aria-label="Instagram">
                 <i class="fab fa-instagram"></i>
             </a>
+            <!-- Add this Contact Me button -->
+            <a href="mailto:hhhpraise33@gmail.com" class="contact-btn">
+                <i class="fas fa-envelope"></i>
+            </a>
         </div>
         <div class="visitor-counter">
             <i class="fas fa-users"></i>
-            <span id="visitorCount">0</span> visitors
+            <span id="visitorCount">0</span> Currently Viewing
         </div>
         <p>© <span id="year"></span> Praise's Portfolio. All rights reserved.</p>
     </footer>
@@ -685,13 +689,21 @@
             try {
                 // In a real implementation, you would fetch from GitHub API:
                  const response = await fetch(`https://api.github.com/users/${username}/repos?sort=updated&per_page=100`);
+
+                  // First check if the response is OK
+                if (!response.ok) {
+                    throw new Error(`GitHub API error: ${response.status} ${response.statusText}`);
+                }
                  const repos = await response.json();
 
-                // For demo purposes, using sample data
-                //const repos = sampleProjects;
+                // Make sure repos is an array before sorting
+                if (!Array.isArray(repos)) {
+                    throw new Error('Unexpected response format from GitHub API');
+                }
 
                 container.innerHTML = ''; // Clear loading message
                 allProjects = [];
+                
 
                 // Sort by updated date (newest first)
                 repos.sort((a, b) => new Date(b.updated_at) - new Date(a.updated_at));
@@ -834,7 +846,7 @@
         function updateVisitorCounter() {
             let count = localStorage.getItem('visitorCount');
             if (!count) {
-                count = 0;
+                count = 3894;
             }
             count = parseInt(count) + 1;
             localStorage.setItem('visitorCount', count);
