Enhance SEO and social metadata in index.html
Added meta tags for description, keywords, author, robots, and language to improve SEO. Included Open Graph tags for better social sharing and a JSON-LD schema for structured data. Updated the page title and favicon links for consistency.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Praise's GitHub Portfolio</title>
+    <meta name="description" content="Praise's developer portfolio showcasing Python, JavaScript, Android, and web development projects. View live demos, download executables, and explore open-source code on GitHub.">
+    <meta name="keywords" content="developer portfolio, python developer, javascript developer, android developer, web developer, github projects, open source, software engineer, programming, hhhpraise">
+    <meta name="author" content="Praise (hhhpraise)">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://hhhpraise.github.io/portfolio/">
+    <meta property="og:title" content="Praise's Developer Portfolio | Python, JavaScript & Android Projects">
+    <meta property="og:description" content="Explore my collection of Python, JavaScript, Android, and web development projects. Live demos, downloadable applications, and open-source code available on GitHub.">
+    <meta property="og:image" content="https://github.com/Hhhpraise.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="Praise's Portfolio">
+
+    <title>Praise's Developer Portfolio | Python, JavaScript & Android Projects | hhhpraise</title>
+    <link rel="canonical" href="https://hhhpraise.github.io/portfolio/">
+
+    <link rel="icon" type="image/x-icon" href="https://github.com/Hhhpraise.png">
+    <link rel="apple-touch-icon" href="https://github.com/Hhhpraise.png">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Person",
+              "name": "Praise",
+              "alternateName": "hhhpraise",
+              "url": "https://hhhpraise.github.io/portfolio/",
+              "image": "https://github.com/Hhhpraise.png",
+              "sameAs": [
+                "https://github.com/Hhhpraise",
+                "https://www.instagram.com/__praisee"
+              ],
+              "jobTitle": "Software Developer",
+              "worksFor": {
+                "@type": "Organization",
+                "name": "Independent Developer"
+              },
+              "knowsAbout": [
+                "Python Programming",
+                "JavaScript Development",
+                "Android Development",
+                "Web Development",
+                "Software Engineering",
+                "Open Source Development"
+              ],
+              "description": "Software developer specializing in Python, JavaScript, Android, and web development. Creates open-source projects and tools available on GitHub."
+        }
+</script>
     <style>
         :root {
             --bg-color: #ffffff;
